--- a/public/templates/base.html
+++ b/public/templates/base.html
@@ -14,6 +14,7 @@
 
             <ul class="nav-list">
                 <li><a href="{{ url_for('authors.list_authors') }}">Authors</a></li>
+                <li><a href="{{ url_for('customers.list_customers') }}">Customers</a></li>
             </ul>
         </div>
     </nav>
