new frontend for copies

--- a/public/templates/base.html
+++ b/public/templates/base.html
@@ -16,6 +16,7 @@
                 <li><a href="{{ url_for('authors.list_authors') }}">Authors</a></li>
                 <li><a href="{{ url_for('customers.list_customers') }}">Customers</a></li>
                 <li><a href="{{ url_for('titles.list_titles') }}">Titles</a></li>
+                <li><a href="{{ url_for('copies.list_copies') }}">Copies</a></li>
             </ul>
         </div>
     </nav>
