--- a/public/templates/customer_form.html
+++ b/public/templates/customer_form.html
@@ -26,7 +26,7 @@
 
         <div class="form-actions">
             <button type="submit" class="btn btn-save">Save</button>
-            <a href="{{ url_for('authors.list_authors') }}" class="btn btn-back">Back</a>
+            <a href="{{ url_for('customers.list_customers') }}" class="btn btn-back">Back</a>
         </div>
 
     </form>
