--- a/public/static/css/styles.css
+++ b/public/static/css/styles.css
@@ -1,9 +1,14 @@
 body {
     font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    display: flex;
+    flex-direction: column;
+}
+
+html, body {
+    height: 100%;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
-    color: #333;
 }
 
 /* NAVIGATION */
@@ -49,6 +54,7 @@ body {
 
 /* CONTAINER */
 .content-container {
+    flex: 1;
     width: 90%;
     max-width: 1200px;
     margin: 20px auto;
@@ -56,6 +62,9 @@ body {
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
+
+    display: flex;
+    flex-direction: column;
 }
 
 /* MESSAGES */
@@ -171,7 +180,7 @@ body {
 
 /* PAGES */
 .page-nav {
-    margin-top: 20px;
+    margin-top: auto;
     display: flex;
     justify-content: center;
 }
@@ -280,4 +289,9 @@ textarea.form-input {
 }
 .btn-back:hover {
     background-color: #5a6268;
+}
+
+.error-container {
+    text-align: center;
+    margin-top: 50px;
 }
