added loan frontend

--- a/public/templates/base.html
+++ b/public/templates/base.html
@@ -17,6 +17,7 @@
                 <li><a href="{{ url_for('customers.list_customers') }}">Customers</a></li>
                 <li><a href="{{ url_for('titles.list_titles') }}">Titles</a></li>
                 <li><a href="{{ url_for('copies.list_copies') }}">Copies</a></li>
+                <li><a href="{{ url_for('loans.list_loans') }}">Loans</a></li>
             </ul>
         </div>
     </nav>
