--- a/public/static/css/styles.css
+++ b/public/static/css/styles.css
@@ -62,9 +62,6 @@ html, body {
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
-
-    display: flex;
-    flex-direction: column;
 }
 
 /* MESSAGES */
@@ -102,6 +99,12 @@ html, body {
 }
 
 /* TABLE */
+.table-responsive {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+}
+
 .data-table {
     width: 100%;
     border-collapse: collapse;
@@ -177,6 +180,25 @@ html, body {
 .btn-delete:hover {
     background-color: #b52422;
 }
+
+.btn-return {
+    background-color: #cf9d18;
+    color: white;
+    margin-right: 5px;
+}
+.btn-return:hover {
+    background-color: #a07a13
+}
+
+.btn-disabled {
+    pointer-events: none;
+    cursor: default;
+    opacity: 0.6;
+    background-color: gray;
+    color: white;
+    margin-right: 5px;
+}
+
 
 /* PAGES */
 .page-nav {
