--- a/public/templates/base.html
+++ b/public/templates/base.html
@@ -18,6 +18,7 @@
                 <li><a href="{{ url_for('titles.list_titles') }}">Titles</a></li>
                 <li><a href="{{ url_for('copies.list_copies') }}">Copies</a></li>
                 <li><a href="{{ url_for('loans.list_loans') }}">Loans</a></li>
+                <li><a href="{{ url_for('stats.list_stats') }}">Stats</a></li>
             </ul>
         </div>
     </nav>
